--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -1,4 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Budget</string>
+    <string name="app_name" translatable="false">Budget</string>
+    <string name="repast">餐饮</string>
+    <string name="snack">零食</string>
+    <string name="fruit">水果</string>
+    <string name="shopping">购物</string>
+    <string name="daily_use">日用</string>
+    <string name="transportation">交通</string>
+    <string name="vegetable">蔬菜</string>
+    <string name="sport">运动</string>
+    <string name="contract">通讯</string>
+    <string name="clothes">服饰</string>
+    <string name="cosmetic">美容</string>
+    <string name="housing">住房</string>
+    <string name="at_home">居家</string>
+    <string name="kids">孩子</string>
+    <string name="elder">长辈</string>
+    <string name="social">社交</string>
+    <string name="trip">旅行</string>
+    <string name="alcohol">烟酒</string>
+    <string name="digital">数码</string>
+    <string name="car">汽车</string>
+    <string name="healing">医疗</string>
+    <string name="books">书籍</string>
+    <string name="learn">学习</string>
+    <string name="gift_money">礼金</string>
+    <string name="gift">礼物</string>
+    <string name="office">办公</string>
+    <string name="lottery">彩票</string>
+    <string name="express">快递</string>
+    <string name="repair">维修</string>
+    <string name="entertainment">娱乐</string>
+    <string name="relatives">亲友</string>
+    <string name="pet">宠物</string>
+    <string name="donate">捐赠</string>
+    <string name="setting">设置</string>
+    <string name="expense">支出</string>
+    <string name="income">收入</string>
 </resources>
