增加字符串资源

--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="setting">设置</string>
     <string name="salary">工资</string>
     <string name="part_time">兼职</string>
+    <string name="money_gift_2">随礼</string>
     <string name="other">其他</string>
     <string name="money_management">理财</string>
     <string name="expense">支出</string>
