--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -69,4 +69,6 @@
     <string name="name">名字</string>
     <string name="cant_empty_typeName">名字不能为空</string>
     <string name="name_existed">名字已经存在</string>
+    <string name="more" translatable="false">more</string>
+    <string name="more_hint" translatable="false">More function is coming</string>
 </resources>
