--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="name_existed">名字已经存在</string>
     <string name="more" translatable="false">more</string>
     <string name="more_hint" translatable="false">More function is coming</string>
+    <string name="change_theme">change color</string>
 </resources>
