--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -71,7 +71,23 @@
     <string name="name_existed">名字已经存在</string>
     <string name="more" translatable="false">more</string>
     <string name="more_hint" translatable="false">More function is coming</string>
-    <string name="change_theme">change color</string>
-    <string name="theme_setting">Theme Setting</string>
-    <string name="theme_setting_hint">choose a new color for theme</string>
+    <string name="change_theme">主题</string>
+    <string name="theme_setting_hint" translatable="false">choose a new color for theme</string>
+    <string name="theme_setting" translatable="false">Theme Setting</string>
+    <string name="MaroonFlush">栗色同花顺</string>
+    <string name="TallPoppy">高罂粟</string>
+    <string name="Fire">火焰</string>
+    <string name="Brown">褐</string>
+    <string name="Cinnamon">肉桂</string>
+    <string name="Verdun">凡尔登</string>
+    <string name="JapaneseLaurel">日本月桂树</string>
+    <string name="FunGreen">趣绿</string>
+    <string name="TropicalRainForest">热带雨林</string>
+    <string name="Mosque">清真寺</string>
+    <string name="BahamaBlue">巴哈马蓝</string>
+    <string name="Endeavour">努力</string>
+    <string name="RoyalBlue">王子</string>
+    <string name="PurpleHeart">紫色勋章</string>
+    <string name="PurpleHeart2">天芥菜</string>
+    <string name="VioletEggplant">茄子</string>
 </resources>
