--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -57,7 +57,7 @@
     <string name="type_others">其他</string>
     <string name="no_chart_data">这个月还没有数据哦</string>
     <string name="warn">警告</string>
-    <string name="delete_hint">删除类型将删除所有和这个类型有关的记录，确定删除吗？</string>
+    <string name="delete_type_hint">删除类型将删除所有和这个类型有关的记录，确定删除吗？</string>
     <string name="edit_type">编辑类型</string>
     <string name="add_type">添加类型</string>
     <string name="catering">饮食</string>
@@ -96,4 +96,7 @@
     <string name="type">类型</string>
     <string name="amount">金额</string>
     <string name="date">日期</string>
+    <string name="edit">编辑</string>
+    <string name="delete">删除</string>
+    <string name="delete_record_hint">删除记录不可恢复，确定删除吗？</string>
 </resources>
