--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -50,10 +50,10 @@
     <string name="cancel">取消</string>
     <string name="sure">确定</string>
     <string name="choose_date">选择日期</string>
-    <string name="overview" translatable="false">OVERVIEW</string>
-    <string name="overview_hint" translatable="false">Here is a list of your transactions</string>
-    <string name="distribution" translatable="false">DISTRIBUTION</string>
-    <string name="distribution_hint" translatable="false">Here is your financial report</string>
+    <string name="overview" >概览</string>
+    <string name="overview_hint" >这是你的交易清单</string>
+    <string name="distribution">百分比</string>
+    <string name="distribution_hint">这是你的财务报告</string>
     <string name="type_others">其他</string>
     <string name="no_chart_data">这个月还没有数据哦</string>
     <string name="warn">警告</string>
@@ -69,11 +69,11 @@
     <string name="name">名字</string>
     <string name="cant_empty_typeName">名字不能为空</string>
     <string name="name_existed">名字已经存在</string>
-    <string name="more" translatable="false">more</string>
-    <string name="more_hint" translatable="false">More function is coming</string>
+    <string name="more" >更多</string>
+    <string name="more_hint">更多功能正在开发中</string>
     <string name="change_theme">主题</string>
-    <string name="theme_setting_hint" translatable="false">choose a new color for theme</string>
-    <string name="theme_setting" translatable="false">Theme Setting</string>
+    <string name="theme_setting_hint">选择一个新的主题色吧</string>
+    <string name="theme_setting">主题设置</string>
     <string name="MaroonFlush">栗色同花顺</string>
     <string name="TallPoppy">高罂粟</string>
     <string name="Fire">火焰</string>
@@ -99,4 +99,7 @@
     <string name="edit">编辑</string>
     <string name="delete">删除</string>
     <string name="delete_record_hint">删除记录不可恢复，确定删除吗？</string>
+    <string name="lang">语言</string>
+    <string name="change_lang">语言设置</string>
+    <string name="change_lang_hint">选择你想要的语言</string>
 </resources>
