--- a/core/designsystem/src/main/res/values/strings.xml
+++ b/core/designsystem/src/main/res/values/strings.xml
@@ -104,5 +104,6 @@
     <string name="change_lang_hint">选择你想要的语言</string>
     <string name="chinese">中文</string>
     <string name="english">English</string>
+    <string name="japanese">日本語です</string>
     <string name="language">中文</string>
 </resources>
